# FastEPD

./: .gitignore  README.md  library.properties
.github/workflows/: main.yml
Linux/: Makefile  README.md  setup.sh
examples/Arduino/LilyGoT5_Shutdown/: LilyGoT5_Shutdown.ino
examples/Arduino/antialias_font/: antialias_font.ino
examples/Arduino/compressed_images/: compressed_images.ino
examples/Arduino/getting_started/: getting_started.ino
examples/Arduino/gif_player/: gif_player.ino
examples/Arduino/gray_matrix_editor/: gray_matrix_editor.ino
examples/Arduino/grayscale_test/: grayscale_test.ino
examples/Arduino/sd_file_explorer/: sd_file_explorer.ino
examples/Arduino/show_jpeg/: show_jpeg.ino
examples/Arduino/simple_clock/: Roboto_Black_200.h  Roboto_Black_80.h  simple_clock.ino
examples/Arduino/sleep_power_test/: sleep_power_test.ino
examples/Linux/compressed_images/: Makefile  main.cpp
examples/Linux/eink_monitor/: Makefile  main.cpp
examples/Linux/gif_it8951/: Makefile  main.cpp
examples/Linux/gif_player/: Makefile  Roboto_Black_50.h  main.cpp
examples/Linux/it8951_grayscale/: Makefile  README.txt  main.cpp
examples/Linux/it8951_hat/: Makefile  main.cpp
examples/Linux/show_img/: Makefile  main.cpp
examples/esp_idf/www-image/main/: CMakeLists.txt  jpgdec-render.cpp  settings.h
fontconvert/: main.c
imageconvert/: main.c
src/: FastEPD.cpp  FastEPD.h  FastEPD.inl  Group5.h  arduino_io.inl  bb_ep_gfx.inl  bb_epdiy.cpp  bb_epdiy.h  bb_epdiy.inl  databus.c  databus.h  g5enc.inl  headless.cpp  headless.h  linux_io.inl  s3_diff.S
(+33 files in other folders)
